Added config that is passed to each client (important for attacks). Added Delta-DAGMM detection. Optimized training code in training notebooks.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  delta_dagmm\n",
+      "Selected 1 malicious clients out of 10\n",
+      "Malicious client IDs: [1]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -42,13 +43,13 @@
     "DATASET = \"mnist\"\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
-    "\n",
-    "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 10\n",
+    "\n",
+    "# Percentage of malicious clients\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round.\n",
     "FRACTION_FIT = 1.0\n",
@@ -58,17 +59,17 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.std_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
     "if DETECTION_METHOD.value == \"dagmm\":\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET + \"/run_15\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/dagmm/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
@@ -91,13 +92,37 @@
     "         \"mean\": \"./dagmm/std_dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/std_dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
+    "elif DETECTION_METHOD.value == \"delta_dagmm\":\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (collects the pure local and also the global model for each iteration)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
+    "\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/delta_dagmm/dagmm_anomaly_threshold.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 1   # Does not perform the detection in the first round. This is important for Delta-DAGMM since in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/delta_dagmm/dagmm_model_mnist.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/delta_dagmm/dagmm_hyperparameters.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
+    "         \"cov\": \"./dagmm/delta_dagmm/gmm_param_cov.pt\",\n",
+    "         \"mean\": \"./dagmm/delta_dagmm/gmm_param_mean.pt\",\n",
+    "         \"mixture\": \"./dagmm/delta_dagmm/gmm_param_mixture.pt\",\n",
+    "    }\n",
+    "\n",
+    "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
+    "if ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
+    "    assert PERCENT_MALICIOUS == 0.0\n",
     "# ========\n",
+    "\n",
+    "# ~~~~~~~~\n",
+    "ADDITIONAL_ATTACK_CONFIG = {}\n",
+    "if ATTACK_METHOD.value == \"random_weights\":\n",
+    "    ADDITIONAL_ATTACK_CONFIG[\"R\"] = 1e-2        # 1e-1 is best against DAGMM/STD-DAGMM and 1e-2 best against Delta-DAGMM\n",
+    "# ~~~~~~~~\n",
     "\n",
     "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
     "malicious_clients = sorted(random.sample(range(NUM_CLIENTS), num_malicious))\n",
     "\n",
     "print(f\"Selected {num_malicious} malicious clients out of {NUM_CLIENTS}\")\n",
-    "print(\"Malicious client IDs:\", malicious_clients) \n",
+    "print(\"Malicious client IDs:\", malicious_clients)\n",
     "\n",
     "import yaml\n",
     "\n",
@@ -112,6 +137,8 @@
     "# Store the attack method as a .yaml file\n",
     "with open(\"./config/attack_method.yaml\", \"w\") as f:\n",
     "     yaml.dump({\"attack_method\": ATTACK_METHOD.value}, f)\n",
+    "     if ADDITIONAL_ATTACK_CONFIG:\n",
+    "        yaml.dump(ADDITIONAL_ATTACK_CONFIG, f)\n",
     "\n",
     "# Store the detection method as a .yaml file\n",
     "with open(\"./config/detection_method.yaml\", \"w\") as f:\n",
