--- a/train_dagmm.ipynb
+++ b/train_dagmm.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "f7cd1b4e",
    "metadata": {},
    "outputs": [
@@ -82,6 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Shape of one sample of the test set:  61706\n",
+      "Number of samples used per distribution:  2200\n",
       "Random data used:\n",
       "[-0.02509198  0.09014286  0.04639879  0.0197317  -0.06879627]\n",
       "[-0.00627753 -0.00980954  0.00209561 -0.00923988  0.00655945]\n",
@@ -99,17 +101,22 @@
    ],
    "source": [
     "np.random.seed(42)\n",
-    "def generate_random_samples(like_array, R=1e-3):\n",
-    "    return np.random.uniform(low=-R, high=R, size=like_array.shape)\n",
+    "def generate_random_samples(shape, R=1e-3, n=10):\n",
+    "    return [np.random.uniform(low=-R, high=R, size=shape) for i in range(0,n)]\n",
     "\n",
-    "def generate_random_data(like_array, R_values):\n",
+    "def generate_random_data(shape, n_samples, R_values):\n",
     "    random_data = []\n",
     "    for R_value in R_values:\n",
-    "        random_data.append(generate_random_samples(like_array, R_value))\n",
+    "        random_data.append(generate_random_samples(shape, R_value, n=n_samples))\n",
     "    return random_data\n",
     "\n",
     "# Generate random samples (same shape as test set)\n",
-    "random_data = generate_random_data(X_test, [1e-1, 1e-2, 1e-3, 1e-4, 1e-5, 1e-6, 1e1])\n",
+    "shape = X_test.shape[1]\n",
+    "print(\"Shape of one sample of the test set: \", shape)\n",
+    "n_samples = len(X_test)\n",
+    "print(\"Number of samples used per distribution: \", n_samples)\n",
+    "\n",
+    "random_data = generate_random_data(shape, n_samples, [1e-1, 1e-2, 1e-3, 1e-4, 1e-5, 1e-6, 1e1])\n",
     "print(\"Random data used:\")\n",
     "for r in random_data:\n",
     "    print(f\"{r[0][:5]}\")"
@@ -117,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d67e1f85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to retrieve a list of energies of random data\n",
+    "# Function to retrieve a list of energies of a list of random data\n",
     "def get_random_energies(random_data, dagmm_model, gmm_params):\n",
     "    energy_list = []\n",
     "    for data in random_data:\n",
@@ -362,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "e860c6b2",
    "metadata": {},
    "outputs": [
@@ -397,7 +404,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "3ab22235",
    "metadata": {},
    "outputs": [],
@@ -429,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "2e54d811",
    "metadata": {},
    "outputs": [
@@ -451,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "a58278ae",
    "metadata": {},
    "outputs": [],
@@ -461,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "076550b4",
    "metadata": {},
    "outputs": [
