--- a/train_std_dagmm.ipynb
+++ b/train_std_dagmm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "c3ffc418",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cdcee2b2",
    "metadata": {},
    "outputs": [
@@ -99,20 +99,25 @@
    ],
    "source": [
     "np.random.seed(42)\n",
-    "def generate_random_samples(like_array, R=1e-3):\n",
-    "    return np.random.uniform(low=-R, high=R, size=like_array.shape)\n",
+    "def generate_random_samples(shape, R=1e-3, n=10):\n",
+    "    return [np.random.uniform(low=-R, high=R, size=shape) for i in range(0,n)]\n",
     "\n",
-    "def generate_random_data(like_array, R_values):\n",
+    "def generate_random_data(shape, n_samples, R_values):\n",
     "    random_data = []\n",
     "    for R_value in R_values:\n",
-    "        random_data.append(generate_random_samples(like_array, R_value))\n",
+    "        random_data.append(generate_random_samples(shape, R_value, n=n_samples))\n",
     "    return random_data\n",
     "\n",
     "# Generate random samples (same shape as test set)\n",
-    "random_data = generate_random_data(X_test, [1e-1, 1e-2, 1e-3, 1e-4, 1e-5, 1e-6, 1e1])\n",
+    "shape = X_test.shape[1]\n",
+    "print(\"Shape of one sample of the test set: \", shape)\n",
+    "n_samples = len(X_test)\n",
+    "print(\"Number of samples used per distribution: \", n_samples)\n",
+    "\n",
+    "random_data = generate_random_data(shape, n_samples, [1e-1, 1e-2, 1e-3, 1e-4, 1e-5, 1e-6, 1e1])\n",
     "print(\"Random data used:\")\n",
     "for r in random_data:\n",
-    "    print(f\"{r[0][:5]}\", \"std: \", np.std(r[0]))"
+    "    print(f\"{r[0][:5]}\")"
    ]
   },
   {
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "34378572",
    "metadata": {},
    "outputs": [
@@ -312,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "2fd7d6e7",
    "metadata": {},
    "outputs": [],
@@ -339,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "482a35fd",
    "metadata": {},
    "outputs": [
@@ -374,7 +379,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "911ebf17",
    "metadata": {},
    "outputs": [],
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "c3d13139",
    "metadata": {},
    "outputs": [
@@ -429,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "1ee1282b",
    "metadata": {},
    "outputs": [],
@@ -439,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "17362987",
    "metadata": {},
    "outputs": [
@@ -531,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "30b7769d",
    "metadata": {},
    "outputs": [
@@ -559,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "d6c6f4c5",
    "metadata": {},
    "outputs": [
