--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  delta_dagmm\n",
+      "Using the detection method:  no_detection\n",
       "Selected 1 malicious clients out of 10\n",
       "Malicious client IDs: [1]\n",
       "num_gpus:  0.1\n"
@@ -59,10 +59,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_free_rider_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
@@ -108,7 +108,7 @@
     "    }\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
-    "if ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
+    "if ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
     "    assert PERCENT_MALICIOUS == 0.0\n",
     "# ========\n",
     "\n",
@@ -116,6 +116,9 @@
     "ADDITIONAL_ATTACK_CONFIG = {}\n",
     "if ATTACK_METHOD.value == \"random_weights\":\n",
     "    ADDITIONAL_ATTACK_CONFIG[\"R\"] = 1e-2        # 1e-1 is best against DAGMM/STD-DAGMM and 1e-2 best against Delta-DAGMM\n",
+    "\n",
+    "if ATTACK_METHOD.value == \"advanced_free_rider\":\n",
+    "    ADDITIONAL_ATTACK_CONFIG[\"n\"] = NUM_CLIENTS\n",
     "# ~~~~~~~~\n",
     "\n",
     "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
