Fully implemented Advanced Free rider attack. Removed debug prints.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 1 malicious clients out of 10\n",
-      "Malicious client IDs: [1]\n",
-      "num_gpus:  0.1\n"
+      "Using the detection method:  delta_dagmm\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "DATASET = \"mnist\"\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 10\n",
@@ -59,10 +59,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_free_rider_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
@@ -185,7 +185,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "experiment-py3.10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
