Refined the folder structure. Trained a Delta-DAGMM model for both 10 and 100 client scenarios (MNIST).

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
     "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
-    "NUM_ROUNDS = 10\n",
+    "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
     "PERCENT_MALICIOUS = 0.1\n",
@@ -94,22 +94,23 @@
     "    }\n",
     "elif DETECTION_METHOD.value == \"delta_dagmm\":\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (collects the pure local and also the global model for each iteration)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (additionally collects the global model for each iteration)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/\" + str(NUM_CLIENTS) + \"/run_malicious_2\"  # Output directory of the training data of the current run.\n",
     "\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/delta_dagmm/dagmm_anomaly_threshold.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 1   # Does not perform the detection in the first round. This is important for Delta-DAGMM since in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/delta_dagmm/dagmm_model_mnist.pt\"\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/delta_dagmm/dagmm_hyperparameters.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/model.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_hyperparameters.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
-    "         \"cov\": \"./dagmm/delta_dagmm/gmm_param_cov.pt\",\n",
-    "         \"mean\": \"./dagmm/delta_dagmm/gmm_param_mean.pt\",\n",
-    "         \"mixture\": \"./dagmm/delta_dagmm/gmm_param_mixture.pt\",\n",
+    "         \"cov\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_cov.pt\",\n",
+    "         \"mean\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_mean.pt\",\n",
+    "         \"mixture\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_mixture.pt\",\n",
     "    }\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
-    "    assert PERCENT_MALICIOUS == 0.0\n",
+    "    if PERCENT_MALICIOUS != 0.0:\n",
+    "        print(\"\\n\\n####### Warning: Performing data collection with malicious clients! Only use if intended! #######\\n\\n\")\n",
     "# ========\n",
     "\n",
     "# ~~~~~~~~\n",
@@ -185,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "experiment-py3.10",
    "language": "python",
    "name": "python3"
   },
