Implemented the adaptive attack

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
     "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
