Implemented RFFL detection. Enhanced the Handling of detections.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  delta_dagmm\n",
+      "Using the detection method:  rffl\n",
       "Selected 10 malicious clients out of 100\n",
       "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
       "num_gpus:  0.041666666666666664\n"
@@ -36,11 +36,12 @@
     "import yaml\n",
     "from attacks.attack_names import AttackNames\n",
     "from detections.detection_names import DetectionNames\n",
+    "from dataset_names.dataset_names import DatasetNames\n",
     "\n",
     "# --- Experiment Settings ---\n",
     "\n",
     "# Dataset: mnist or cifar10\n",
-    "DATASET = \"mnist\"\n",
+    "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
@@ -51,7 +52,7 @@
     "# Percentage of malicious clients\n",
     "PERCENT_MALICIOUS = 0.1\n",
     "\n",
-    "# Fraction of the clients to choose for training in one round.\n",
+    "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
     "\n",
     "# If true, plots about the loss and accuracy will be generated on wandb\n",
@@ -62,12 +63,13 @@
     "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.rffl_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
+    "DATASET = DATASET.value\n",
     "# ========\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
-    "if DETECTION_METHOD.value == \"dagmm\":\n",
+    "if DETECTION_METHOD.value == DetectionNames.dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
     "\n",
@@ -80,7 +82,7 @@
     "         \"mean\": \"./dagmm/dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "elif DETECTION_METHOD.value == \"std_dagmm\":\n",
+    "elif DETECTION_METHOD.value == DetectionNames.std_dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Use DAGMM for performing data collection\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"-----\" \n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/std_dagmm/dagmm_anomaly_threshold.yaml\"\n",
@@ -92,7 +94,7 @@
     "         \"mean\": \"./dagmm/std_dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/std_dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "elif DETECTION_METHOD.value == \"delta_dagmm\":\n",
+    "elif DETECTION_METHOD.value == DetectionNames.delta_dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (additionally collects the global model for each iteration)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/\" + str(NUM_CLIENTS) + \"/run_malicious_2\"  # Output directory of the training data of the current run.\n",
@@ -107,8 +109,13 @@
     "         \"mixture\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_mixture.pt\",\n",
     "    }\n",
     "\n",
+    "elif DETECTION_METHOD.value == DetectionNames.rffl_detection.value:\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET == \"mnist\" else 0.15  # Use 0.5 for MNIST and 0.15 for CIFAR10 (as specified by the authors)\n",
+    "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
-    "if ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
+    "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
     "    if PERCENT_MALICIOUS != 0.0:\n",
     "        print(\"\\n\\n####### Warning: Performing data collection with malicious clients! Only use if intended! #######\\n\\n\")\n",
     "# ========\n",
