Fixed typo in rffl. Restructured Detection handling to handle detections before and after the aggregation step. Added FGFL detection (v_0.1).

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  rffl\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  fgfl\n",
+      "Selected 1 malicious clients out of 10\n",
+      "Malicious client IDs: [1]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
@@ -60,10 +60,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_free_rider_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.rffl_detection\n",
+    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
