Clients now also send their label distributions. Abstracted the format of the result sent by the client to the server by making it a function of the superclass BenignClient. Added skeleton for FDFL. Removed unused imports.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  fgfl\n",
-      "Selected 1 malicious clients out of 10\n",
-      "Malicious client IDs: [1]\n",
+      "Using the detection method:  fdfl\n",
+      "Selected 2 malicious clients out of 10\n",
+      "Malicious client IDs: [0, 1]\n",
       "num_gpus:  0.1\n"
      ]
     }
@@ -50,7 +50,7 @@
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.2\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -60,10 +60,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_free_rider_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
+    "DETECTION_METHOD = DetectionNames.fdfl_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
@@ -113,6 +113,11 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET == \"mnist\" else 0.15  # Use 0.5 for MNIST and 0.15 for CIFAR10 (as specified by the authors)\n",
+    "\n",
+    "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
+    "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
+    "    with open(\"./config/fake_label_distribution.yaml\", \"w\") as f:\n",
+    "        yaml.dump({\"method\": method}, f)\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
