--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -24,9 +24,9 @@
      "output_type": "stream",
      "text": [
       "Using the detection method:  fdfl\n",
-      "Selected 2 malicious clients out of 10\n",
-      "Malicious client IDs: [0, 1]\n",
-      "num_gpus:  0.1\n"
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -44,13 +44,13 @@
     "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.2\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -60,7 +60,7 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
     "DETECTION_METHOD = DetectionNames.fdfl_detection\n",
@@ -115,6 +115,9 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET == \"mnist\" else 0.15  # Use 0.5 for MNIST and 0.15 for CIFAR10 (as specified by the authors)\n",
     "\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.2    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
+    "                                                # i.e. they are not very similar, the flag counter will be increased (if flag is very high, it will be marked as a free rider).\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"n_clusters\"] = 5       # Use 5 for 100 clients and 3 for 10 clients\n",
     "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
     "    with open(\"./config/fake_label_distribution.yaml\", \"w\") as f:\n",
     "        yaml.dump({\"method\": method}, f)\n",
