--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  fdfl\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  viceroy\n",
+      "Selected 2 malicious clients out of 10\n",
+      "Malicious client IDs: [0, 1]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -44,13 +44,13 @@
     "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.2\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -60,10 +60,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.fdfl_detection\n",
+    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
@@ -121,6 +121,17 @@
     "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
     "    with open(\"./config/fake_label_distribution.yaml\", \"w\") as f:\n",
     "        yaml.dump({\"method\": method}, f)\n",
+    "\n",
+    "elif DETECTION_METHOD.value == DetectionNames.viceroy_detection.value:\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"omega\"] = 0.525    # History decay factor (value taken from the paper)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"eta\"] = 0.2        # Reputation update factor (value taken from the paper)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"kappa\"] = 0.5      # Confidence parameter of FoolsGold.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"skip_first_round\"] = True  # Specify if the first round should be skipped. \n",
+    "                                                            # This is a good practice since the initial global model is randomly initialized.\n",
+    "                                                            # Thus, the gradient calculation can be messy.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1   # Specify the threshold that separates benign clients from free riders.\n",
+    "                                                                # The values it is compared to range from 0 to 1, where 0 denotes a very suspicious client\n",
+    "                                                                # and 1 a very unsuspicious one.\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
