Implemented the detection part of WEF. Removed unused imports.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  viceroy\n",
+      "Using the detection method:  wef\n",
       "Selected 2 malicious clients out of 10\n",
       "Malicious client IDs: [0, 1]\n",
       "num_gpus:  0.1\n"
@@ -63,7 +63,7 @@
     "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
+    "DETECTION_METHOD = DetectionNames.wef_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
