--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -24,8 +24,8 @@
      "output_type": "stream",
      "text": [
       "Using the detection method:  wef\n",
-      "Selected 2 malicious clients out of 10\n",
-      "Malicious client IDs: [0, 1]\n",
+      "Selected 3 malicious clients out of 10\n",
+      "Malicious client IDs: [0, 1, 4]\n",
       "num_gpus:  0.1\n"
      ]
     }
@@ -50,7 +50,7 @@
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.2\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -132,6 +132,11 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1   # Specify the threshold that separates benign clients from free riders.\n",
     "                                                                # The values it is compared to range from 0 to 1, where 0 denotes a very suspicious client\n",
     "                                                                # and 1 a very unsuspicious one.\n",
+    "elif DETECTION_METHOD.value == DetectionNames.wef_detection.value:\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = 0.02   # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
+    "                                                    # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
+    "                                                    # Use:  MNIST_10: 0.02\n",
+    "                                                    #       MNIST_100: 0.01\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
@@ -189,6 +194,12 @@
     "    NUM_GPUS = min_gpu_perc\n",
     "    \n",
     "print(\"num_gpus: \", NUM_GPUS)\n",
+    "\n",
+    "# Generate the name of the run.\n",
+    "sep = \"--\"\n",
+    "RUN_NAME = f\"{DATASET}{sep}n={NUM_CLIENTS}{sep}{int(PERCENT_MALICIOUS*100)}%{sep}{ATTACK_METHOD.value}{sep}{DETECTION_METHOD.value}\"\n",
+    "with open(\"run_name.yaml\", \"w\") as f:\n",
+    "    yaml.dump({\"RUN_NAME\": RUN_NAME}, f)\n",
     "\n",
     "# Load pyproject.toml\n",
     "with open(\"pyproject.toml\", \"r\") as f:\n",
