--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  wef\n",
-      "Selected 3 malicious clients out of 10\n",
-      "Malicious client IDs: [0, 1, 4]\n",
+      "Using the detection method:  no_detection\n",
+      "Selected 1 malicious clients out of 10\n",
+      "Malicious client IDs: [1]\n",
       "num_gpus:  0.1\n"
      ]
     }
@@ -41,13 +41,13 @@
     "# --- Experiment Settings ---\n",
     "\n",
     "# Dataset: mnist or cifar10\n",
-    "DATASET = DatasetNames.mnist\n",
+    "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
-    "NUM_ROUNDS = 20\n",
+    "NUM_ROUNDS = 10\n",
     "\n",
     "# Percentage of malicious clients\n",
     "PERCENT_MALICIOUS = 0.1\n",
@@ -60,10 +60,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.advanced_delta_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.no_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.wef_detection\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
