--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 1 malicious clients out of 10\n",
-      "Malicious client IDs: [1]\n",
-      "num_gpus:  0.1\n"
+      "Using the detection method:  fgfl\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -41,13 +41,13 @@
     "# --- Experiment Settings ---\n",
     "\n",
     "# Dataset: mnist or cifar10\n",
-    "DATASET = DatasetNames.cifar10\n",
+    "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds\n",
-    "NUM_ROUNDS = 10\n",
+    "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
     "PERCENT_MALICIOUS = 0.1\n",
@@ -60,10 +60,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.no_attack\n",
+    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "DATASET = DATASET.value\n",
@@ -100,7 +100,7 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/\" + str(NUM_CLIENTS) + \"/run_malicious_2\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_anomaly_threshold.yaml\"\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 1   # Does not perform the detection in the first round. This is important for Delta-DAGMM since in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 2   # Does not perform the detection in the first x round(s). This is important for Delta-DAGMM since especially in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/model.pt\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_hyperparameters.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
@@ -113,6 +113,9 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET == \"mnist\" else 0.15  # Use 0.5 for MNIST and 0.15 for CIFAR10 (as specified by the authors)\n",
+    "\n",
+    "elif DETECTION_METHOD.value == DetectionNames.fgfl_detection.value:\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 3    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
     "\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.2    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
@@ -196,8 +199,8 @@
     "print(\"num_gpus: \", NUM_GPUS)\n",
     "\n",
     "# Generate the name of the run.\n",
-    "sep = \"--\"\n",
-    "RUN_NAME = f\"{DATASET}{sep}n={NUM_CLIENTS}{sep}{int(PERCENT_MALICIOUS*100)}%{sep}{ATTACK_METHOD.value}{sep}{DETECTION_METHOD.value}\"\n",
+    "from evaluation.utils import get_output_path\n",
+    "RUN_NAME = get_output_path(DATASET, NUM_CLIENTS, int(PERCENT_MALICIOUS*100), ATTACK_METHOD, DETECTION_METHOD)\n",
     "with open(\"run_name.yaml\", \"w\") as f:\n",
     "    yaml.dump({\"RUN_NAME\": RUN_NAME}, f)\n",
     "\n",
