--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -5,34 +5,17 @@
    "execution_count": 1,
    "id": "9f0f6860",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./outputs/mnist--n=10--10%--random_weights--delta_dagmm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dataset_names.dataset_names import DatasetNames\n",
     "from attacks.attack_names import AttackNames\n",
     "from detections.detection_names import DetectionNames\n",
-    "from evaluation.utils import get_output_path\n",
-    "\n",
-    "dataset = DatasetNames.mnist\n",
-    "n_clients = 10\n",
-    "perc_malicious = 10\n",
-    "attack = AttackNames.random_weights_attack\n",
-    "detection = DetectionNames.delta_dagmm_detection\n",
-    "\n",
-    "test_path = \"./outputs/\" + get_output_path(dataset, n_clients, perc_malicious, attack, detection)\n",
-    "print(test_path)"
+    "from evaluation.utils import get_output_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "f2d1bfa0",
    "metadata": {},
    "outputs": [],
@@ -41,7 +24,7 @@
     "import json\n",
     "from statistics import fmean\n",
     "\n",
-    "def get_avg_effectiveness(base_path):\n",
+    "def get_metrics(base_path):\n",
     "    TP_list = []\n",
     "    FP_list = []\n",
     "    FN_list = []\n",
@@ -50,6 +33,7 @@
     "    malicious_clients_list = []\n",
     "    detected_clients_list = []\n",
     "    effectivenesses_list = []\n",
+    "    time_per_iteration_list = []\n",
     "    for root, dirs, files in os.walk(base_path):\n",
     "        relative_path = os.path.relpath(root, base_path)\n",
     "        path_parts = relative_path.split(os.sep)\n",
@@ -76,6 +60,11 @@
     "                elif \"round_metrics\" in file_name:\n",
     "                    with open(file_path, 'r') as f:\n",
     "                        round_metrics = json.load(f)\n",
+    "                elif \"time\" in file_name:\n",
+    "                    with open(file_path, 'r') as f:\n",
+    "                        time = json.load(f)\n",
+    "                    time_per_iteration = time[\"time_per_iteration\"]\n",
+    "                    time_per_iteration_list.append(time_per_iteration)\n",
     "\n",
     "\n",
     "            # Calculate the Effectiveness of the run\n",
@@ -109,42 +98,22 @@
     "    Precision_avg = fmean(Precision_list)\n",
     "    Recalls_avg = fmean(Recall_list)\n",
     "    effectiveness_avg = fmean(effectivenesses_list)\n",
+    "    time_per_iteration_avg = fmean(time_per_iteration_list)\n",
     "\n",
     "    return {\n",
     "        \"TP_avg\": TP_avg,\n",
     "        \"FP_avg\": FP_avg,\n",
     "        \"FN_avg\": FN_avg,\n",
     "        \"Precision_avg\": Precision_avg,\n",
-    "        \"Recalls_avg\": Recalls_avg,\n",
-    "        \"Effectiveness_avg\": effectiveness_avg\n",
+    "        \"Recall_avg\": Recalls_avg,\n",
+    "        \"Effectiveness_avg\": effectiveness_avg,\n",
+    "        \"time_per_iteration_avg\": time_per_iteration_avg\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fcbb2d21",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.07291666666666659]\n",
-      "[0.07837713231904093]\n",
-      "[0.08438330828805912]\n",
-      "{'TP_avg': 1.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.8333333333333334, 'Recalls_avg': 1.0, 'Effectiveness_avg': 0.07855903575792221}\n"
-     ]
-    }
-   ],
-   "source": [
-    "effectiveness = get_avg_effectiveness(test_path)\n",
-    "print(effectiveness)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "e9b30042",
    "metadata": {},
    "outputs": [
@@ -152,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'TP_avg': 10.0, 'FP_avg': 3.0, 'FN_avg': 0.0, 'Precision_avg': 0.7692307692307693, 'Recalls_avg': 1.0, 'Effectiveness_avg': 0.4200041315631395}\n"
+      "{'TP_avg': 10.0, 'FP_avg': 3.0, 'FN_avg': 0.0, 'Precision_avg': 0.7692307692307693, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4200041315631395, 'time_per_iteration_avg': 3.05485565662384}\n"
      ]
     }
    ],
@@ -164,8 +133,93 @@
     "detection = DetectionNames.fgfl_detection\n",
     "\n",
     "test_path = \"./outputs/\" + get_output_path(dataset, n_clients, perc_malicious, attack, detection)\n",
-    "effectiveness = get_avg_effectiveness(test_path)\n",
-    "print(effectiveness)"
+    "metrics = get_metrics(test_path)\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "167de65d",
+   "metadata": {},
+   "source": [
+    "# MNIST experiment evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "02eea377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "def get_experiment_results(dataset: DatasetNames, n_clients: List, perc_malicious: List, attacks: List, detections: List):\n",
+    "    results = {}\n",
+    "\n",
+    "    for n_c in n_clients:\n",
+    "        for perc_m in perc_malicious:\n",
+    "            for attack in attacks:\n",
+    "                for detection in detections:\n",
+    "                    path_name = get_output_path(dataset, n_c, perc_m, attack, detection)\n",
+    "                    path = \"./outputs/\" + path_name\n",
+    "                    metrics = get_metrics(path)\n",
+    "                    results[path_name] = metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e82607a",
+   "metadata": {},
+   "source": [
+    "## Baseline Runs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f855ead4",
+   "metadata": {},
+   "source": [
+    "### MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f5369d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DatasetNames.mnist\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [0]\n",
+    "attacks = [AttackNames.no_attack]\n",
+    "detections = [DetectionNames.no_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1e97d05",
+   "metadata": {},
+   "source": [
+    "### CIFAR10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "223f5271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DatasetNames.cifar10\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [0]\n",
+    "attacks = [AttackNames.no_attack]\n",
+    "detections = [DetectionNames.no_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
    ]
   }
  ],
