--- a/datasets_visualization.ipynb
+++ b/datasets_visualization.ipynb
@@ -121,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "experiment-py3.10",
    "language": "python",
    "name": "python3"
   },
