--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  fgfl\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  delta_dagmm\n",
+      "Selected 0 malicious clients out of 10\n",
+      "Malicious client IDs: []\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -38,40 +38,45 @@
     "from detections.detection_names import DetectionNames\n",
     "from dataset_names.dataset_names import DatasetNames\n",
     "\n",
-    "# --- Experiment Settings ---\n",
+    "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
+    "# --- --- ---   Experiment Settings   --- --- ---\n",
+    "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
     "# Dataset: mnist or cifar10\n",
-    "DATASET = DatasetNames.mnist\n",
+    "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.0\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
     "\n",
-    "# If true, plots about the loss and accuracy will be generated on wandb\n",
-    "# TODO try to use this for all the metrics\n",
+    "# If true, plots about the loss and accuracy will be generated on wandb.\n",
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.no_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
-    "# --- --- --- --- --- --- ---\n",
+    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
+    "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
+    "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
-    "DATASET = DATASET.value\n",
-    "# ========\n",
+    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
+    "# This section contains settings and hyperparameters needed for the specific detections and attacks.\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
+    "# ________________________________________________________________________\n",
     "if DETECTION_METHOD.value == DetectionNames.dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET.value + \"/run_test_3\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/dagmm/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
@@ -82,6 +87,7 @@
     "         \"mean\": \"./dagmm/dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.std_dagmm_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Use DAGMM for performing data collection\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"-----\" \n",
@@ -94,37 +100,39 @@
     "         \"mean\": \"./dagmm/std_dagmm/gmm_param_mean.pt\",\n",
     "         \"mixture\": \"./dagmm/std_dagmm/gmm_param_mixture.pt\",\n",
     "    }\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.delta_dagmm_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the Delta-DAGMM model.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = True   # Set to True to collect training data for the Delta-DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_test_data_collection\"] = False   # Set to True to collect test data (additionally collects the global model for each iteration)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET + \"/\" + str(NUM_CLIENTS) + \"/run_malicious_2\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/delta_dagmm/dagmm_train_data/\" + DATASET.value + \"/\" + str(NUM_CLIENTS) + \"/run_7\"  # Output directory of the training data of the current run.\n",
     "\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_anomaly_threshold.yaml\"\n",
+    "    model_path = \"./dagmm/delta_dagmm/models/\" + DATASET.value + \"/\" + str(NUM_CLIENTS)\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = model_path + \"/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 2   # Does not perform the detection in the first x round(s). This is important for Delta-DAGMM since especially in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/model.pt\"\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/dagmm_hyperparameters.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] =  model_path + \"/model.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = model_path + \"/dagmm_hyperparameters.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
-    "         \"cov\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_cov.pt\",\n",
-    "         \"mean\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_mean.pt\",\n",
-    "         \"mixture\": \"./dagmm/delta_dagmm/models/mnist/\" + str(NUM_CLIENTS) + \"/gmm_param_mixture.pt\",\n",
+    "         \"cov\": model_path + \"/gmm_param_cov.pt\",\n",
+    "         \"mean\": model_path + \"/gmm_param_mean.pt\",\n",
+    "         \"mixture\": model_path + \"/gmm_param_mixture.pt\",\n",
     "    }\n",
-    "\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.rffl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"alpha\"] = 0.95\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"beta\"] = 1/(3*NUM_CLIENTS)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET == \"mnist\" else 0.15  # Use 0.5 for MNIST and 0.15 for CIFAR10 (as specified by the authors)\n",
-    "\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET.value == \"mnist\" else 0.15  # TODO see if this values are good (0.5 for MNIST and 0.15 for CIFAR10 specified by the authors)\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fgfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 3    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
-    "\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.2    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
     "                                                # i.e. they are not very similar, the flag counter will be increased (if flag is very high, it will be marked as a free rider).\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"n_clusters\"] = 5       # Use 5 for 100 clients and 3 for 10 clients\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"n_clusters\"] = 5 if NUM_CLIENTS == 100 else 3       # Use 5 for 100 clients and 3 for 10 clients\n",
     "    method = \"weak\"     # Perform either 'weak' or 'strong' imitation of label distributions.\n",
     "    with open(\"./config/fake_label_distribution.yaml\", \"w\") as f:\n",
     "        yaml.dump({\"method\": method}, f)\n",
-    "\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.viceroy_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"omega\"] = 0.525    # History decay factor (value taken from the paper)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"eta\"] = 0.2        # Reputation update factor (value taken from the paper)\n",
@@ -135,26 +143,41 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1   # Specify the threshold that separates benign clients from free riders.\n",
     "                                                                # The values it is compared to range from 0 to 1, where 0 denotes a very suspicious client\n",
     "                                                                # and 1 a very unsuspicious one.\n",
+    "# ________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.wef_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = 0.02   # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
-    "                                                    # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
-    "                                                    # Use:  MNIST_10: 0.02\n",
-    "                                                    #       MNIST_100: 0.01\n",
+    "    epsilon = 0.01\n",
+    "    if DATASET.value == DatasetNames.mnist.value:\n",
+    "        if NUM_CLIENTS == 10:\n",
+    "            epsilon = 0.02\n",
+    "        else:\n",
+    "            epsilon = 0.01\n",
+    "    else:\n",
+    "        if NUM_CLIENTS == 10:\n",
+    "            epsilon = None\n",
+    "        else:\n",
+    "            epsilon = None\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"epsilon\"] = epsilon    # Determines how strict the threshold distinguishes between benign clients and free riders.\n",
+    "                                                        # Choosing a low value results in low FP but may miss free riders whereas a high value may results in FPs.\n",
     "\n",
     "print(\"Using the detection method: \", DETECTION_METHOD.value)\n",
     "if \"dagmm\" in DETECTION_METHOD.value and ADDITIONAL_DETECTION_CONFIG and ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"]:\n",
-    "    if PERCENT_MALICIOUS != 0.0:\n",
+    "    if PERCENT_MALICIOUS != 0.0 and ATTACK_METHOD != AttackNames.no_attack:\n",
     "        print(\"\\n\\n####### Warning: Performing data collection with malicious clients! Only use if intended! #######\\n\\n\")\n",
-    "# ========\n",
+    "# ´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´´\n",
     "\n",
-    "# ~~~~~~~~\n",
+    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "ADDITIONAL_ATTACK_CONFIG = {}\n",
     "if ATTACK_METHOD.value == \"random_weights\":\n",
     "    ADDITIONAL_ATTACK_CONFIG[\"R\"] = 1e-2        # 1e-1 is best against DAGMM/STD-DAGMM and 1e-2 best against Delta-DAGMM\n",
     "\n",
     "if ATTACK_METHOD.value == \"advanced_free_rider\":\n",
     "    ADDITIONAL_ATTACK_CONFIG[\"n\"] = NUM_CLIENTS\n",
-    "# ~~~~~~~~\n",
+    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ======== ========\n",
+    "\n",
+    "\n",
+    "# Store all the necessary settings\n",
+    "# ################################\n",
     "\n",
     "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
     "malicious_clients = sorted(random.sample(range(NUM_CLIENTS), num_malicious))\n",
@@ -166,7 +189,7 @@
     "\n",
     "# Store the dataset to use as a .yaml file\n",
     "with open(\"./config/dataset.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"dataset\": DATASET}, f)\n",
+    "    yaml.dump({\"dataset\": DATASET.value}, f)\n",
     "\n",
     "# Store the list of malicious clients as a .yaml file\n",
     "with open(\"./config/malicious_clients.yaml\", \"w\") as f:\n",
