Added final accuracy to the evaluation script.

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2d1bfa0",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,7 @@
     "    detected_clients_list = []\n",
     "    effectivenesses_list = []\n",
     "    time_per_iteration_list = []\n",
+    "    final_acc_list = []\n",
     "    for root, dirs, files in os.walk(base_path):\n",
     "        relative_path = os.path.relpath(root, base_path)\n",
     "        path_parts = relative_path.split(os.sep)\n",
@@ -70,6 +71,7 @@
     "            # Calculate the Effectiveness of the run\n",
     "            acc_0 = round_metrics[0][\"accuracy\"]    # We use the accuracy of the first (0) round.\n",
     "            acc_n = round_metrics[-1][\"accuracy\"]\n",
+    "            final_acc_list.append(acc_n)\n",
     "            clients_done = []\n",
     "            effectivenesses = []\n",
     "            for idx, round_metric in enumerate(round_metrics):\n",
@@ -99,6 +101,7 @@
     "    Recalls_avg = fmean(Recall_list)\n",
     "    effectiveness_avg = fmean(effectivenesses_list)\n",
     "    time_per_iteration_avg = fmean(time_per_iteration_list)\n",
+    "    final_acc_avg = fmean(final_acc_list)\n",
     "\n",
     "    return {\n",
     "        \"TP_avg\": TP_avg,\n",
@@ -107,13 +110,14 @@
     "        \"Precision_avg\": Precision_avg,\n",
     "        \"Recall_avg\": Recalls_avg,\n",
     "        \"Effectiveness_avg\": effectiveness_avg,\n",
-    "        \"time_per_iteration_avg\": time_per_iteration_avg\n",
+    "        \"Time_per_iteration_avg\": time_per_iteration_avg,\n",
+    "        \"Final_acc_avg\": final_acc_avg\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e9b30042",
    "metadata": {},
    "outputs": [
@@ -121,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'TP_avg': 10.0, 'FP_avg': 3.0, 'FN_avg': 0.0, 'Precision_avg': 0.7692307692307693, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4200041315631395, 'time_per_iteration_avg': 3.05485565662384}\n"
+      "{'TP_avg': 10.0, 'FP_avg': 3.0, 'FN_avg': 0.0, 'Precision_avg': 0.7692307692307693, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4200041315631395, 'Time_per_iteration_avg': 3.05485565662384, 'Final_acc_avg': 0.9298333333333334}\n"
      ]
     }
    ],
